<package>
    <name>champion_nav_msgs</name>
    <version>1.12.12</version>
    <description>

        Holds the action description and relevant messages for the move_base package

    </description>
    <author>zengqi</author>
    <maintainer email="davidvlu@gmail.com">zq </maintainer>
    <maintainer email="mferguson@fetchrobotics.com">zq</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/move_base_msgs</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
　　　　<build_depend>nav_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>PoseWithPrecision_msg</build_depend>
    <build_depend>GraphConstraint_msg</build_depend> 
    <build_depend>Edge_msg</build_depend>
    <build_depend>Node_msg</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
　　　　<run_depend>nav_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>PoseWithPrecision_msg</run_depend>    
    <run_depend>GraphConstraint_msg</run_depend>
    <run_depend>Edge_msg</run_depend>
    <run_depend>Node_msg</run_depend>

</package>

